--- a/frontend_working/package.json
+++ b/frontend_working/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-vexflow": "^0.0.4",
+    "vexflow": "^4.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
