--- a/frontend_working/package.json
+++ b/frontend_working/package.json
@@ -2,6 +2,7 @@
   "name": "roboear_web",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:8080",
   "options": {
     "allowedHosts": [
       "localhost",
